--- a/post-detail.html
+++ b/post-detail.html
@@ -78,7 +78,7 @@
     <footer>
       <h3>Nordic Rose</h3>
       <p>
-        All Rights Reserved by Mahamudul Hasan Dipu.
+        All Rights Reserved By Mahamudul Hasan Dipu.
       </p>
       <span
         ><p>&copy;</p>
